--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.17.22",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "daisyui": "^5.0.9",
     "eslint": "^9.21.0",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.3",
